# fastapi-monitor

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
examples/: __init__.py  main.py  settings.py
fastapi_monitor/: app.py  depends.py  middleware.py  middlewares.py  models.py  notifications.py  routes.py  template.py
fastapi_monitor/static/: index.html
fastapi_monitor/static/assets/: index.8d845e67.js  index.9dcff51c.css  index.b07b474e.css  vendor.642d02b4.js
fastapi_monitor/templates/: base.html  index.html  layout.html  logs.html  navbar.html
fastapi_monitor/web/: 404.html  index.html
fastapi_monitor/web/_next/static/chunks/: main-66657abcccee5ade813a.js  webpack.js
fastapi_monitor/web/_next/static/chunks/pages/: _app.js  index-7ac7172b14a9148946cc.js  index-9a0be1ab793f03c81ae5.js  index.js
fastapi_monitor/web/_next/static/webpack/: webpack.084329ee4880b10471fe.hot-update.js
fastapi_monitor/web/_next/static/yyB_LWGCHB7HRrjhly00O/: _buildManifest.js
fastapi_monitor/web/_next/static/zoO73_h-7sKg2rzGEFsSa/: _buildManifest.js
web/: next.config.js  package-lock.json  package.json
web/pages/: _app.js
